[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/game_elements/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/game_elements/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/game_elements/MobSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/paused_menus/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/paused_menus/GameOverScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/MotleyForcesRegular-w1rZ3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/RonysiswadiArchitect1-3zjeL.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/clock_font.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/3 = false
glow_levels/5 = false
adjustment_enabled = true
adjustment_color_correction = SubResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Clock" type="CanvasLayer" parent="."]
layer = 0

[node name="ClockDisplay" type="Control" parent="Clock"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimeDisplay" type="Label" parent="Clock/ClockDisplay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 50.0
margin_right = 512.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 9 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Clock"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 50.0
margin_right = -21.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 30 )

[node name="HighscoreLabel" type="Label" parent="Clock/HBoxContainer"]
margin_top = 7.0
margin_right = 78.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "HIGHSCORE"

[node name="HighScore" type="Label" parent="Clock/HBoxContainer"]
margin_left = 82.0
margin_top = 8.0
margin_right = 124.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 5 )
text = "00:00"

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobSpawner" parent="." groups=["main"] instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Pause" parent="." instance=ExtResource( 4 )]

[node name="GameOverScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="GameOverScreenTimer" type="Timer" parent="."]

[node name="SpawnerLevelUpTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="gameOver" from="Player" to="." method="_on_Player_gameOver"]
[connection signal="quit" from="GameOverScreen" to="." method="_on_GameOverScreen_quit"]
[connection signal="timeout" from="GameOverScreenTimer" to="." method="_on_GameOverScreenTimer_timeout"]
[connection signal="timeout" from="SpawnerLevelUpTimer" to="." method="_on_SpawnerLevelUpTimer_timeout"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
